--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -23,4 +23,5 @@
   --font-weight: 400;
   --line-height: 1.5rem;
   --root-background-color: var(--background-color);
+  --wrapper-gap: 1.5rem;
 }
